<resources>
    <string name="app_name">UNiT</string>
    <string name="next_screen">Next Screen</string>
    <string name="spinner_year">Select Year</string>
    <string name="spinner_month">Select Month</string>
    <string name="graph_screen">Graph screen</string>
    <string name="conservation">Conservation Screen</string>
    <string name="fuel">Fuel </string>
    <string name="time">Time </string>
    <string name="click_me">Click Me</string>
    <string name="enter_address_or_city">Enter address or city</string>
    <string name="search_activity">Search Activity</string>
    <string name="search_for_the_product">Search for the product</string>
    <string name="speech_prompt">Say something</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="sign_in">SIGN IN</string>
    <string name="selfie">Selfie</string>
</resources>
